app prop til jenkins

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/contractbook_workout
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://3.80.67.86:3306/contractbook_workout
+spring.datasource.username=root
+spring.datasource.password=mypassword
